# Shadow-Functions-Engine

./: 2.-How-to-use-the-engine.md  CMakeLists.txt  Makefile.win  README.md  ShadowFunctionsEngine.cpp  ShadowFunctionsEngine.dev  ShadowFunctionsEngine.layout  Variables-in-the-main-.cpp-file.md
FOVs/: down.txt  left.txt  leftDown.txt  leftUp.txt  right.txt  rightDown.txt  rightUp.txt  up.txt
animations/: logo.txt
documentation/: 2.-How-to-use-the-engine and 2.1. How the engine works.md  2.-How-to-use-the-engine and 2.1. How the engine works: a breakdown of the main .cpp file.md  2.-How-to-use-the-engine.md  2.2. How to use the editors, and other further details.md  3. Description of EVERYTHING 3.1. Defines and 3.2. Structures.md  3.2. Structures.md  3.4. Functions and 3.4.1. input.h.md  3.4.2.-movement.h.md  3.4.3.-output.h.md  3.4.4. render.h.md  3.4.5.-shadowFunctions.h.md
documentation/offline/: 1. Introduction.md  1._Introduction.md  2. How to use the engine and 2.1. How the engine works.md  2.2. How to use the editors, and other further details.md  2.2.-How-to-use-the-editors,-and-other-further-details.md  2.2._How_to_use_the_editors,_and_other_further_details.md  2._How_to_use_the_engine_and_2.1._How_the_engine_works.md  3. Description of EVERYTHING and 3.1. Defines.md  3.2. Structures.md  3.2._Structures.md  3.3. Variables in the main .cpp file.md  3.3._Variables_in_the_main_.cpp_file.md  3.4. Functions and 3.4.1. input.h.md  3.4.2. movement.h.md  3.4.2._movement.h.md  3.4.3. output.h.md  3.4.3._output.h.md  3.4.4. render.h.md  (+9 more)
maps/: world.txt
(+26 files in other folders)
